
$Id: changes.txt,v 1.72 2006/05/12 18:02:11 vvd0 Exp $

----
MVDSV v0.19.21-CVS build 23?? (2006.05.??)
[server]
* VVD <vvd0@users.sourceforge.net>
- improved connection algorithm: if client core dumped, then allow to reuse slot (EXPERIMENTAL)
- improved status command output with ktpro in server console - always write new status
- disabled general-protection-fault window box on Win32 if there are command line options
  "-noerrormsgbox" or "-d"
(Thanks to schm)
- added new value for sv_forcespec_onfull
  2 - same as 1 (look at 0.19.20-develop changes) if player's "svf" userinfo key == 1
  changed default value from 0 to 2
  example: setinfo svf 1
- bugfix from 0.19.20-develop: didn't added sv_forcespec_onfull
  and behavior was like with value 1 (careless mistake)


----
MVDSV v0.19.20-develop build 2320 (2006.04.28)
- replaced all:
    atoi -> Q_atoi
    atof -> Q_atof
- bugfix from 0.179b: SunOS on SPARC-64 didn't determine big endian
(Thanks to Krok)
- for developers: move all common tools functions from common.{c|h} and qwdtools/tools.{c|h}
  to bothtools.c and bothdefs.h
[server]
- new cvar sv_forcespec_onfull:
  0 - old connect algorithm, i.e you got full connect message and continue trying connect
      to server as player
  1 - force player enter server as spectator if all players's slots are busy and
      if there are empty slots for spectators
  default: 0
(Thanks to qqshka)
- bugfix from 0.1727b: possibility to crash server from client via upload function
(Thanks to jhodge)
- added kqueue instead select for FreeBSD target: 'make -DKQUEUE' (EXPERIMENTAL)
- fixed number of sended packets while connect with sv_getrealip > 0 to 10
- improved spectator support in qvm mods:
  "seems spectator is sort of hack in QW, I let qvm mods serve spectator like we do for normal player"
(by qqshka)
- bugfix ktpro: forbid ';' as commands separator if mod is ktpro, because it don't quote arguments